--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="stopwatch">
+        <h2> Praveen Stopwatch Project</h2>
         <h1 id="displayTime">00:00:00</h1>
+        
         <div class="buttons">
             <img src="images/stop.png" onclick="watchStop()">
             <img src="images/start.png" onclick="watchStart()">
